# pyfetch

./: .gitignore  Makefile  PKGBUILD  README.md  config.ini  flake.nix  pyfetch  pyfetch.py  pyproject.toml  result  setup.py
pyfetch/: __init__.py
