[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfetch"
version = "1.2.0"
authors = [
    {name = "Nir Rudov"}
]
description = "Minimalist system info tool in Python"
requires-python = ">=3.6"
dependencies = [
    "psutil>=5.8.0",
    "colorama",
]

[project.scripts]
pyfetch = "pyfetch:main"
